Upgraded FastTree to use a new DOM structure that will hopefully avoid triggering several IE layout bugs (in specific the RTL positioning bug and the extra horizonal scrollbar bug).
Also, at the same time, removed BiDiUtil.

--- a/trunk/src/com/google/gwt/demos/fasttree/public/FastTreeDemo.css
+++ b/trunk/src/com/google/gwt/demos/fasttree/public/FastTreeDemo.css
@@ -1,6 +1,7 @@
 /** FastTree styles loaded as cached resource. */
 .gwt-FastTree {
   font-size: 12px;
+  background: white;
 }
 
 /**
